--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-    "name": "04-tareas",
-    "version": "1.0.0",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "colors": "^1.4.0",
-        "yargs": "^15.0.2"
-    }
+  "name": "04-tareas",
+  "version": "1.0.0",
+  "description": "Recuerda instalar los paquetes",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "yargs": "^15.0.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rtufino/node-tareas.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rtufino/node-tareas/issues"
+  },
+  "homepage": "https://github.com/rtufino/node-tareas#readme"
 }
